<resources>

    <string name="app_name">My Plant</string>

    <string name="Signup">Signup</string>
    <string name="fullName">Full Name</string>
    <string name="helloWelcomeBack">"Hello, welcome back"</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="termsConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="haveAccount">I Already have an account?</string>
    <string name="please_log_in">Please Log in</string>
    <string name="please_signup">Please Signup</string>
    <string name="signin">Signin</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="please_choose_your_favorite_plants_type">Please choose your favorite plants type</string>
    <string name="username">userName</string>
    <string name="plant_chosen">Plant Chosen</string>
    <string name="add">Add</string>
    <string name="title_my_plant">My plant</string>
    <string name="title_profile">Profile</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="you_didn_t_add_any_plant">You didn’t add any plant.\n Yet Add some</string>
    <string name="empty_plant">Empty Plant</string>
    <string name="edit_your_personal_information">Edit your personal information</string>
    <string name="my_info">My Info</string>
    <string name="logout">Logout</string>
    <string name="artical">Artical</string>
    <string name="read_clemance_terms">Read Clemance terms and condition</string>
    <string name="read_clemance_terms_and_condition">Read Clemance terms and condition</string>
    <string name="represent_all_my_favorite_articles">Represent all my favorite articles</string>

    <string-array name="selectPlantType">
        <item>select plant Type</item>
        <item>Roses and ornamental</item>
        <item>Trees</item>
        <item>Cactus</item>
        <item>climbing plants</item>
        <item>Aromatic plants</item>
        <item>poisonous plants</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Signin">signin</string>
    <string name="startNow">Start Now</string>
    <string name="safa">Safa</string>
    <string name="please_select_one_least">Please select one at least</string>
    <string name="plant_name">Plant Name</string>
    <string name="age">Plant Age</string>
    <string name="description">Description</string>
    <string name="catcus">Catcus</string>
    <string name="plant_type">plant type</string>
    <string name="plant_age">plant Age</string>
    <string name="next">Next</string>
    <string name="please_add_photo">please add photo</string>
    <string name="invalid_input">invalid input</string>
    <string name="success_add_plant">success add plant</string>
    <string name="success_add_notification">success add notification</string>
    <string name="success">success</string>
    <string name="fail_add_post">adding data failed </string>
    <string name="fail_add_notification">Failed data notification </string>
    <!--    <string name="success_add_post">success add plant</string>-->
    <string name="success_update_plant">success update plant</string>
    <string name="fail_get_data">fail get data</string>
    <string name="success_add">Success Add</string>
    <string name="fail">Fail</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="agree_following_terms">By using Clemance you agree to the following terms:</string>
    <string name="simply_dummy_text">simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="done">Done</string>
    <string name="plant_date">plant Date</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="get_notifications">Get notifications about what is\n coming up with your gardens</string>
    <string name="editpassword">Edit Password</string>
    <string name="create_new_password">Create \nNew password</string>
    <string name="new_password">New Password</string>
    <string name="your_new_password">Your new password must be different form pervious used passwords</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">save</string>

<!--    <string name="default_web_client_id">save</string>-->

</resources>