<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="6dp"
    android:background="@drawable/box1_white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/articalImageIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding1" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardImage"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/articalNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_myplant_background"
            android:padding="8dp"
            android:text="@string/catcus"
            android:textColor="#FFA700" />

        <TextView
            android:id="@+id/articalTypeTV"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/plant_type"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/articalCreatedAtTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:drawablePadding="8dp"
            android:text="@string/plant_age"
            android:textColor="@color/light_black"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrowf"
        android:drawablePadding="8dp"
        android:text="View Details"
        android:textColor="@color/light_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>